--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="images/share.png">
     <title>Moja pierwsza strona</title>
+    <link rel="icon" href="images/icon.png">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/table.css" rel="stylesheet">
     <link href="css/article.css" rel="stylesheet">
